Fixed window width on mobile view

--- a/src/main/resources/gwt/material/design/addins/public/css/window.css
+++ b/src/main/resources/gwt/material/design/addins/public/css/window.css
@@ -64,3 +64,10 @@
     visibility: visible !important;
     opacity: 1 !important;
 }
+
+@media only screen and (max-width: 992px) {
+    .window-content{
+        width: 80% !important;
+    }
+
+}
